Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-6931

Fastfat doesn't support FILE_DELETE_ON_CLOSE flag

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.6
    • NTCore
    • None
    • VBOX 4.2.0 and Ros Rev: 58252

    Description

      When a file is opened with FILE_DELETE_ON_CLOSE the OS is supposed to delete the file once all opened handles are closed - currently the file is not deleted.

      Attachments

        Issue Links

          Activity

            People

              ThFabba ThFabba
              lorddoskias lorddoskias
              Votes:
              1 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: