[FASTFAT] - Fail invalid opens specifying FILE_DELETE_ON_CLOSE CORE-6931

svn path=/trunk/; revision=72196